--- a/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
+++ b/Frontend/src/app/app-customer/view/customer-account/customer-account.component.html
@@ -32,7 +32,7 @@
             alt="Annette Black"
           />
           <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
-            <h2 class="fs-lg mb-0">Customer name</h2>
+            <h2 class="fs-lg mb-0">{{getUser().customerProfile.firstName+' '+getUser().customerProfile.lastName}}</h2>
 
             <ul class="list-unstyled fs-sm mt-3 mb-0">
               <li>
@@ -46,7 +46,7 @@
                   class="nav-link fw-normal p-0"
                   href="mailto:annette_black@email.com"
                 ><i class="fi-mail opacity-60 me-2"></i
-                >annette_black@email.com</a
+                >{{getUser().email}}</a
                 >
               </li>
             </ul>
