--- a/Frontend/src/app/app-customer/view/customer-register/cr-step5/cr-step5.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/cr-step5/cr-step5.component.html
@@ -9,8 +9,8 @@
         <div class="d-flex">
           <i class="fi-check-circle me-2 me-sm-3"></i>
           <p class="fs-sm mb-1">
-            <b> Congratulations... </b><br/> You have successfully created your business account.<br/> We will contact
-            you with in 24 hours to confirm your business account information.<br/>Then you can Login to your
+            <b> Congratulations... </b><br/> You have successfully created your customer account.<br/>
+            We sent you an confirmation email. Please verify your account.<br/>Then you can Login to your
             account.<br/> <b>Thank you</b>
           </p>
         </div>
