--- a/Frontend/src/app/app-shop/view/business-account/ba-monitor/ba-monitor.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-monitor/ba-monitor.component.html
@@ -118,7 +118,7 @@
       <div class="card-body">
         <h3 class="h6 card-title mb-2"><a class="text-nav stretched-link text-decoration-none"
                                           href="job-board-single.html">
-          Pending Orders</a></h3>
+          Pending Orders ({{getUser().businessProfile.countPendingOrders}})</a></h3>
       </div>
       <div class="card-footer d-flex align-items-center justify-content-between border-0 pt-0">
         <div class="fs-sm"><span class="text-nowrap me-3"><i
