--- a/Frontend/src/app/app-customer/view/customer-register/cr-step2/cr-step2.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/cr-step2/cr-step2.component.html
@@ -1,1 +1,51 @@
-<p>cr-step2 works!</p>
+<form #crForm2="ngForm" (ngSubmit)="crForm2.form.valid && onSubmit()" novalidate>
+
+  <!-- Step 2: Personal details-->
+  <div class="bg-light rounded-3 p-4 p-md-5 mb-3">
+    <h2 class="h4 mb-4"><i class="fi-info-circle text-primary fs-5 mt-n1 me-2"></i>Personal details</h2>
+    <div class="row">
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-fn">First name <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="cli-fn" value="" placeholder="Enter your first name"
+               required [(ngModel)]="customerProfile.firstName" #firstName="ngModel" name="firstName">
+        <div *ngIf="(firstName.touched || crForm2.submitted) && firstName.errors?.required" class="validErr">
+          First name is required
+        </div>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-ln">Last name <span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="cli-ln" value="" placeholder="Enter your last name"
+               required [(ngModel)]="customerProfile.lastName" #lastName="ngModel" name="lastName">
+        <div *ngIf="(lastName.touched || crForm2.submitted) && lastName.errors?.required" class="validErr">
+          Last name is required
+        </div>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-connum1">Contact number 1<span class='text-danger'>*</span></label>
+        <input class="form-control form-control-lg" type="text" id="cli-connum1" value=""
+               placeholder="Enter your contact number" required [(ngModel)]="customerProfile.contactNumber1"
+               #contactNumber1="ngModel" name="contactNumber1">
+        <div *ngIf="(contactNumber1.touched || crForm2.submitted) && contactNumber1.errors?.required" class="validErr">
+          Contact Number 1 is required
+        </div>
+      </div>
+      <div class="col-sm-6 mb-4">
+        <label class="form-label" for="cli-connum2">Contact number 2</label>
+        <input class="form-control form-control-lg" type="text" id="cli-connum2" value=""
+               placeholder="Enter your contact number" [(ngModel)]="customerProfile.contactNumber2"
+               #contactNumber2="ngModel" name="contactNumber2">
+      </div>
+    </div>
+  </div>
+
+  <div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5">
+    <button type="button" class="btn btn-primary btn-lg rounded-pill"
+            (click)="previousPage()">
+      <i class="fi-chevron-left fs-sm"></i> Previous step
+    </button>
+    <button type="submit" class="btn btn-primary btn-lg rounded-pill ms-sm-auto">
+      Next step <i class="fi-chevron-right fs-sm ms-2"></i>
+    </button>
+  </div>
+
+</form>
