--- a/Frontend/src/app/app-customer/view/customer-register/customer-register.component.html
+++ b/Frontend/src/app/app-customer/view/customer-register/customer-register.component.html
@@ -19,28 +19,34 @@
       <div class="bg-light rounded-3 py-4 px-md-4 mb-3">
         <div class="steps pt-4 pb-1">
           <div class="step"
-               [ngClass]="step===1 || step===2 || step===3 || step===4?'active':''">
+               [ngClass]="step===1 || step===2 || step===3 || step===4 || step===5?'active':''">
             <div class="step-progress"><span class="step-progress-start"></span><span
               class="step-progress-end"></span><span class="step-number">1</span></div>
             <div class="step-label">User Info</div>
           </div>
           <div class="step"
-               [ngClass]="step===2 || step===3 || step===4?'active':''">
+               [ngClass]="step===2 || step===3 || step===4 || step===5?'active':''">
             <div class="step-progress"><span class="step-progress-start"></span><span
               class="step-progress-end"></span><span class="step-number">2</span></div>
             <div class="step-label">Personal details</div>
           </div>
           <div class="step"
-               [ngClass]="step===3 || step===4?'active':''">
+               [ngClass]="step===3 || step===4 || step===5?'active':''">
             <div class="step-progress"><span class="step-progress-start"></span><span
               class="step-progress-end"></span><span class="step-number">3</span></div>
             <div class="step-label">Location details</div>
           </div>
           <div class="step"
-               [ngClass]="step===4?'active':''">
+               [ngClass]="step===4 || step===5?'active':''">
             <div class="step-progress"><span class="step-progress-start"></span><span
               class="step-progress-end"></span><span class="step-number">4</span></div>
             <div class="step-label">Verification</div>
+          </div>
+          <div class="step"
+               [ngClass]="step===5?'active':''">
+            <div class="step-progress"><span class="step-progress-start"></span><span
+              class="step-progress-end"></span><span class="step-number">5</span></div>
+            <div class="step-label">Confirmation</div>
           </div>
         </div>
       </div>
@@ -49,9 +55,10 @@
       <app-cr-step2 *ngIf="step===2"></app-cr-step2>
       <app-cr-step3 *ngIf="step===3"></app-cr-step3>
       <app-cr-step4 *ngIf="step===4"></app-cr-step4>
+      <app-cr-step5 *ngIf="step===5"></app-cr-step5>
 
-      <!-- Navigation-->
-      <div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5"><a class="btn btn-primary btn-lg rounded-pill ms-sm-auto" href="./client-register-2step.html">Next step<i class="fi-chevron-right fs-sm ms-2"></i></a></div>
+      <!--&lt;!&ndash; Navigation&ndash;&gt;-->
+      <!--<div class="d-flex flex-column flex-sm-row bg-light rounded-3 p-4 px-md-5"><a class="btn btn-primary btn-lg rounded-pill ms-sm-auto" href="./client-register-2step.html">Next step<i class="fi-chevron-right fs-sm ms-2"></i></a></div>-->
     </div>
   </div>
 </div>
