--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
@@ -103,7 +103,8 @@
                 <div class="d-flex align-items-center mb-2">
                   <img class="rounded-circle me-1" src="../../../../../assets/img/37.png" width="48" alt="Avatar">
                   <div class="ps-2">
-                    <h6 class="fs-base mb-0">{{itemOrder.customerProfile.customerName}}</h6>
+                    <h6 class="fs-base mb-0">
+                      {{itemOrder.customerProfile.firstName+' '+itemOrder.customerProfile.lastName}}</h6>
                     <div class="text-muted fw-normal fs-sm">0765363828 | 0742213254</div>
                   </div>
                 </div>
