--- a/Frontend/src/app/view/header/header.component.html
+++ b/Frontend/src/app/view/header/header.component.html
@@ -3,6 +3,7 @@
   class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
   data-scroll-header=""
   style=""
+  *ngIf="getUser()===null"
 >
   <div class="container">
     <a class="navbar-brand me-3 me-xl-4" href="real-estate-home.html"
@@ -24,14 +25,14 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <!--<a-->
-      <!--class="btn btn-sm text-primary d-none d-lg-block order-lg-3"-->
-      <!--[routerLink]="''"-->
-      <!--data-bs-toggle="modal"-->
+    <!--class="btn btn-sm text-primary d-none d-lg-block order-lg-3"-->
+    <!--[routerLink]="''"-->
+    <!--data-bs-toggle="modal"-->
     <!--&gt;<i class="fi-user me-2"></i>Sign in</a-->
     <!--&gt;-->
     <a
       class="btn btn-primary btn-sm ms-2 order-lg-3"
-      [routerLink]="''"
+      [routerLink]="'/login'"
     ><i class="fi-user me-2"></i>Sign<span class="d-none d-sm-inline">
         in</span
     ></a
@@ -45,6 +46,93 @@
         </li>
       </ul>
       <!--<button [routerLink]="'/customer'">Login</button>-->
+    </div>
+  </div>
+</header>
+
+<header
+  class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top"
+  data-scroll-header=""
+  *ngIf="getUser()!==null"
+>
+  <div class="container">
+    <a class="navbar-brand me-3 me-xl-4" href="real-estate-home.html"
+    ><img
+      class="d-block"
+      src="https://finder.createx.studio/img/logo/logo-light.svg"
+      width="116"
+      alt="Finder"
+    /></a>
+    <button
+      class="navbar-toggler ms-auto"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="dropdown order-lg-3">
+      <a href="#" class="d-inline-block py-1" data-bs-toggle="dropdown">
+        <img class="rounded-circle" src="../../../../../assets/img/37.png" width="40" alt="User">
+      </a>
+      <div class="dropdown-menu dropdown-menu-end">
+        <div class="d-flex align-items-start border-bottom px-3 py-1 mb-2" style="width: 16rem;">
+          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="User">
+          <div class="ps-2" *ngIf="getUser().role==='C'">
+            <h6 class="fs-base mb-0">
+              {{getUser().customerProfile.firstName+' '+getUser().customerProfile.lastName}}
+            </h6>
+            <div class="fs-xs py-2">(302) 555-0107<br>{{getUser().email}}</div>
+          </div>
+          <div class="ps-2" *ngIf="getUser().role==='B'">
+            <h6 class="fs-base mb-0">
+              {{getUser().businessProfile.businessName}}
+            </h6>
+            <div class="fs-xs py-2">(302) 555-0107<br>{{getUser().email}}</div>
+          </div>
+        </div>
+        <a *ngIf="getUser().role==='C'" [routerLink]="'/customer/header/customer_account/customer_profile'"
+           class="dropdown-item">
+          <i class="fi-user opacity-60 me-2"></i>
+          Account
+        </a>
+        <a *ngIf="getUser().role==='B'" [routerLink]="'/shop/header/business_account/ba_monitor'" class="dropdown-item">
+          <i class="fi-user opacity-60 me-2"></i>
+          Account
+        </a>
+        <a *ngIf="getUser().role==='C'" [routerLink]="'/customer/header/item_shop_search'" class="dropdown-item">
+          <i class="fi-cart opacity-60 me-2"></i>
+          Cart
+        </a>
+        <!-- <a href="#" class="dropdown-item">
+          <i class="fi-lock opacity-60 me-2"></i>
+          Password & Security
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="fi-list opacity-60 me-2"></i>
+          My Listings
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="fi-heart opacity-60 me-2"></i>
+          Wishlist
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="fi-star opacity-60 me-2"></i>
+          Reviews
+        </a>
+        <a href="#" class="dropdown-item">
+          <i class="fi-bell opacity-60 me-2"></i>
+          Notifications
+        </a>
+        <div class="dropdown-divider"></div>
+        <a href="#" class="dropdown-item">Help</a> -->
+        <div class="dropdown-divider"></div>
+        <a (click)="signOut()" class="dropdown-item">Sign Out</a>
+      </div>
     </div>
   </div>
 </header>
