--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-category/ba-manage-category.component.html
@@ -261,7 +261,8 @@
   <div class="accordion" id="category-list">
 
     <!-- Accordion item -->
-    <div class="accordion-item" *ngFor="let itemCategoryE of categories;let i = index">
+    <div class="accordion-item" *ngFor="let itemCategoryE of categories;let i = index"
+    style="border-width: 2px">
       <div class="accordion-header d-flex" id="headingOne">
         <div class="p-2 flex-grow-1 bd-highlight">
           <a class="nav-link">{{itemCategoryE.name}}</a>
