--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
@@ -106,6 +106,7 @@
                     <h6 class="fs-base mb-0">
                       {{itemOrder.customerProfile.firstName+' '+itemOrder.customerProfile.lastName}}</h6>
                     <div class="text-muted fw-normal fs-sm">0765363828 | 0742213254</div>
+                    <div class="text-muted fw-normal fs-sm">{{itemOrder.orderDate}}</div>
                   </div>
                 </div>
               </div>
